--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   "homepage": "https://github.com/satzbeleg/bwsample-js#readme",
   "devDependencies": {
     "jest": "^27.0.5"
+  },
+  "dependencies": {
+    "deep-equal": "^2.0.5",
+    "uuid": "^8.3.2"
   }
 }
